force-app/main/default/objects/Car__c/fields/Comfort__c.field-meta.xml
<CustomField>
    <fullName>Comfort__c</fullName>
    <label>Comfort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>