force-app/main/default/objects/Car__c/fields/Transmission_Type__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Type__c</fullName>
    <label>Transmission Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>