force-app/main/default/objects/Car__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Modal__c</columns>
    <columns>Members__c</columns>
    <columns>Rent_Per_Day__c</columns>
    <columns>Transmission_Type__c</columns>
    <columns>Comfort__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>